--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": "15.11.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -11,7 +14,9 @@
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-validator": "^6.10.0",
     "http-errors": "~1.6.3",
     "luxon": "^1.26.0",
     "mongoose": "^5.12.2",
